--- a/deepsportsanalytics/webapp/templates/_.html
+++ b/deepsportsanalytics/webapp/templates/_.html
@@ -11,15 +11,15 @@ and open the template in the editor.
         <title>{% block title %}{% endblock %} - NHL Predictor</title>
 
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/lib/foundation.min.css') }}">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/lib/foundation-datepicker.min.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/libs/foundation.min.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/libs/foundation-datepicker.min.css') }}">
         <!-- third-party libs -->
-        <script src="{{ url_for('static', filename='js/lib/jquery-1.11.3.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/lib/underscore-min.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/lib/backbone-min.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/lib/foundation.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/lib/foundation-datepicker.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/lib/moment-with-locales.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/libs/jquery-1.11.3.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/libs/underscore-min.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/libs/backbone-min.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/libs/foundation.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/libs/foundation-datepicker.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/libs/moment-with-locales.min.js') }}"></script>
         <!-- application scripts -->
         <script src="{{ url_for('static', filename='js/prediction.js') }}"></script>
         <script src="{{ url_for('static', filename='js/predictionList.js') }}"></script>
