fix empty model

--- a/deepsportsanalytics/webapp/templates/_.html
+++ b/deepsportsanalytics/webapp/templates/_.html
@@ -52,5 +52,8 @@ and open the template in the editor.
          </div>
        </div>
       </footer>
+      <script>
+        $(document).foundation();
+      </script>
     </body>
 </html>
