--- a/deepsportsanalytics/webapp/templates/predictions.html
+++ b/deepsportsanalytics/webapp/templates/predictions.html
@@ -17,6 +17,11 @@
           No Data.
         </td>
       </tr>
+      <tr>
+        <td colspan="4">
+          <div class="progress round"></div>
+        </td>
+      </tr>
     </tbody>
   </table>
 </script>
