--- a/deepsportsanalytics/webapp/templates/predictions.html
+++ b/deepsportsanalytics/webapp/templates/predictions.html
@@ -19,7 +19,7 @@
       </tr>
       <tr>
         <td colspan="4">
-          <div class="progress round"></div>
+          <div class="loading"></div>
         </td>
       </tr>
     </tbody>
