--- a/deepsportsanalytics/webapp/templates/predictions.html
+++ b/deepsportsanalytics/webapp/templates/predictions.html
@@ -17,7 +17,7 @@
           No Data.
         </td>
       </tr>
-      <tr>
+      <tr class="pred-tbl-loading-row" style="display:none">
         <td colspan="4">
           <div class="loading"></div>
         </td>
