--- a/deepsportsanalytics/webapp/templates/_.html
+++ b/deepsportsanalytics/webapp/templates/_.html
@@ -8,7 +8,7 @@ and open the template in the editor.
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{% block title %}{% endblock %} - NHL Predictor</title>
+        <title>{% block title %}{% endblock %} - Sport Analitycs</title>
 
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/libs/foundation.min.css') }}">
@@ -32,7 +32,7 @@ and open the template in the editor.
          <li class="name">
            <h1>
              <a href="#">
-               Sports Analytics
+               Deep Sport Analitycs
              </a>
            </h1>
          </li>
@@ -47,7 +47,7 @@ and open the template in the editor.
          <hr/>
          <div class="row">
            <div class="large-6 columns">
-             <p>© Copyright no one at all. Go to town.</p>
+             <p>E-mail: <a href="mailto:info@deepsport.info">info@deepsport.info</a></p>
            </div>
          </div>
        </div>
