add last update date

--- a/deepsportsanalytics/webapp/templates/_.html
+++ b/deepsportsanalytics/webapp/templates/_.html
@@ -21,6 +21,7 @@ and open the template in the editor.
         <script src="{{ url_for('static', filename='js/libs/foundation-datepicker.min.js') }}"></script>
         <script src="{{ url_for('static', filename='js/libs/moment-with-locales.min.js') }}"></script>
         <!-- application scripts -->
+        <script src="{{ url_for('static', filename='js/statModelState.js') }}"></script>
         <script src="{{ url_for('static', filename='js/prediction.js') }}"></script>
         <script src="{{ url_for('static', filename='js/predictionList.js') }}"></script>
         <script src="{{ url_for('static', filename='js/app.js') }}"></script>
