add search keywords

--- a/deepsportsanalytics/webapp/templates/_.html
+++ b/deepsportsanalytics/webapp/templates/_.html
@@ -8,7 +8,11 @@ and open the template in the editor.
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{% block title %}{% endblock %} - Sport Analitycs</title>
+        <meta name="description" content="Predict results of sport games">
+        <meta name="keywords" content="Sport, Predictions, Games, Result">
+        <meta name="author" content="Andre Suzanovich">
+
+        <title>{% block title %}{% endblock %} - Sport Results Predictions</title>
 
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/libs/foundation.min.css') }}">
