add search keywords

--- a/deepsportsanalytics/webapp/templates/_.html
+++ b/deepsportsanalytics/webapp/templates/_.html
@@ -9,7 +9,7 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Predict results of sport games">
-        <meta name="keywords" content="Sport, Predictions, Games, Result">
+        <meta name="keywords" content="Sport, Predictions, Analitycs, Games, Result, Sports Analitycs">
         <meta name="author" content="Andre Suzanovich">
 
         <title>{% block title %}{% endblock %} - Sport Results Predictions</title>
