--- a/deepsportsanalytics/webapp/templates/index.html
+++ b/deepsportsanalytics/webapp/templates/index.html
@@ -9,8 +9,7 @@
 {% block content %}
   <div id="app">
     <div class="row">
-      <div class="large-6 columns">
-          <div class="callout" id="predictions-container"></div>
+      <div class="large-6 columns" id="predictions-container">          
       </div>
     </div>
   </div>
